--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": "^8.1",
-    "atto/framework": "0.1.0",
+    "atto/framework": "^0.1.0",
     "crell/api-problem": "^3.6",
     "nyholm/psr7-server": "^1",
     "nyholm/psr7": "^1",
