--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "require": {
     "php": "^8.2",
     "atto/framework": "^0.1.0",
+    "atto/psr7-module":  "dev-main",
     "crell/api-problem": "^3.6",
     "nyholm/psr7-server": "^1",
     "nyholm/psr7": "^1",
