--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "membrane/membrane": "^0.9.2"
   },
   "require-dev": {
+    "phpstan/phpstan": "^2.1.28",
     "phpunit/phpunit": "^12.3.14"
   },
   "autoload": {
