--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "nyholm/psr7": "^1",
     "laminas/laminas-stdlib": "^3.16",
     "laminas/laminas-httphandlerrunner": "^2.3.0",
-    "membrane/membrane": "^0.10.0"
+    "membrane/membrane": "^0.10.0",
+    "membrane/openapi-router": "0.5.2"
   },
   "require-dev": {
     "phpstan/phpstan": "^2.1.28",
@@ -32,7 +33,8 @@
 
   "autoload-dev": {
     "psr-4": {
-      "Atto\\Membrane\\Tests\\": "tests/"
+      "Atto\\Membrane\\Tests\\": "tests/",
+      "Atto\\Membrane\\Tests\\Fixture\\": "tests/fixture"
     }
   }
 }
